# react-native-turbo-fs

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-turbo-fs.podspec  tsconfig.json
.github/workflows/: build-android.yml  build-ios.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/hasNamespace/: AndroidManifest.xml
android/src/main/java/com/reactnativeturbofs/: TurboFsModule.java  TurboFsPackage.java
cpp/: react-native-quick-base64.cpp  react-native-turbo-fs.cpp  react-native-turbo-fs.h
example/: app.json  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/turbofsexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/TurboFsExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/TurboFsExample.xcodeproj/: project.pbxproj
example/ios/TurboFsExample.xcodeproj/xcshareddata/xcschemes/: TurboFsExample.xcscheme
example/ios/TurboFsExample.xcworkspace/: contents.xcworkspacedata
example/ios/TurboFsExampleTests/: TurboFsExampleTests.m
example/src/: App.tsx  Benchmarks.tsx  useTestList.ts
example/src/tests/: basics.ts  benchmarks.ts  big-data.ts  convert.ts  corrupt.ts  linebreaks.ts  turbo-fs.ts  url-safe.ts  zero.ts
ios/: TurboFsModule.h  TurboFsModule.mm
ios/TurboFs.xcodeproj/: project.pbxproj
ios/TurboFs.xcodeproj/xcshareddata/xcschemes/: TurboFs.xcscheme
src/: index.ts
